[package]
name = "jupiter"
version = "6.0.0"
edition = "2021"
description = "Anchor CPI client for the Jupiter program."
authors = ["Siong Ong <siong@raccoons.dev>"]
repository = "https://github.com/jup-ag/jupiter-cpi"
license = "Apache-2.0"
keywords = ["solana", "anchor", "cpi", "jupiter"]

[features]
default = ["cpi"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]

[dependencies]
anchor-gen = { git = "https://github.com/cosmic-lab-inc/anchor-gen.git", branch = "main" }
anchor-lang = "0.29.0"
rand = "0.8.5"
borsh = ">=0.9, <1.0.0"
jupiter-amm-interface = { git = "https://github.com/cosmic-lab-inc/jupiter-amm-interface.git", branch = "main" }
solana-program = "1.18"